--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-rate-limit": "^5.2.3",
-    "free-proxy": "^0.1.6",
-    "google-spreadsheet": "^3.1.15",
     "handlebars": "^4.7.7",
     "http-errors": "~1.6.3",
     "https": "^1.0.0",
@@ -23,8 +21,6 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
     "nodemailer-express-handlebars": "^4.0.0",
-    "nodemon": "^2.0.7",
-    "pug": "2.0.0-beta11",
-    "request": "^2.88.2"
+    "nodemon": "^2.0.7"
   }
 }
