--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.1",
     "express-rate-limit": "^5.2.3",
     "handlebars": "^4.7.7",
+    "helmet": "^4.6.0",
     "http-errors": "~1.6.3",
     "https": "^1.0.0",
     "mongodb": "^3.6.3",
