--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemailer": "^6.5.0",
     "nodemailer-express-handlebars": "^4.0.0",
     "nodemon": "^2.0.7",
+    "pug": "^3.0.2",
     "request": "^2.88.2"
   }
 }
