--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 RPC_USER=db000437-f4a5-47b8-a396-10bf5fc24a8b
 RPC_PASSWORD=AIO6hdwi4jeOti6O4wbx4id02_Z_2_WGl1jWdbtYIXRXprQEmalkFpJ9W0UEVdLb-slZZWG17YlA1FQBIXjWn-Q
+NODE_ENV=production
