--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemailer-express-handlebars": "^4.0.0",
     "nodemon": "^2.0.7",
     "pug": "^3.0.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "strong-error-handler": "^4.0.0"
   }
 }
